gcc/testsuite/rust/rustc/ui/error-codes/E0601.rs
// { dg-error ".E0601." "" { target *-*-* } }

